kubernetes/newspace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: newspace
