kubernetes/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ironman
  labels:
    app: ironman
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 32000
  selector:
    app: ironman
